--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.17.1",
     "input": "^1.0.1",
+    "mongoose": "^8.12.2",
     "node-telegram-bot-api": "^0.66.0",
     "telegram": "^2.26.22",
     "telegram-api-js": "^1.2.9"
