--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "compilerOptions": {
     "target": "ES2020",                     
-    "module": "commonjs",                    
+    "module": "commonjs", 
+    "moduleResolution": "node",
+    "resolveJsonModule": true,                   
     "strict": true,                          
     "esModuleInterop": true,                 
     "skipLibCheck": true,                    
